--- a/src/assets/styles/_classes.scss
+++ b/src/assets/styles/_classes.scss
@@ -4,3 +4,35 @@
     border-bottom: 1px solid var(--divider);
   }
 }
+
+.btn {
+  border: 0;
+  border-radius: 3px;
+  padding: 1rem 2rem;
+  font-weight: 700;
+  cursor: pointer;
+  transition: box-shadow 0.2s;
+  &:hover {
+    box-shadow: var(--box-shadow);
+    transition: box-shadow 0.2s;
+  }
+  &-primary {
+    background: var(--primary);
+    color: white;
+  }
+  &-secondary {
+    border: 1px solid var(--primary);
+    background: white;
+    color: var(--primary);
+  }
+ &-danger {
+  border: 1px solid var(--error);
+    background: var(--error);
+    color: white;
+  } 
+  .text {
+    &-error {
+      color: var(--error);
+    }
+  }
+}
