--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -48,6 +48,7 @@ header {
 .content {
   grid-area: content;
   padding: 20px;
+  background: var(--divider);
 }
 
 footer {
@@ -56,5 +57,5 @@ footer {
   background: var(--dark-grey);
   font-size: 1.8rem;
   text-align: center;
-    color: white;
+  color: white;
 }
