--- a/src/form/form.scss
+++ b/src/form/form.scss
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   form {
-    width: 700px;
+    background: white;
+    max-width: 700px;
     padding: 4rem;
     box-shadow: var(--box-shadow);
     border-radius: 3px;
@@ -19,7 +20,8 @@
         font-weight: 700;
         margin-bottom: 1rem;
       }
-      input, texteara {
+      input,
+      textarea {
         border: 1px solid var(--divider);
         padding: 1rem;
         outline: 0;
@@ -27,9 +29,17 @@
         &:focus {
           border-color: var(--accent);
         }
-        textarea {
-          min-height: 20rem;
-        }
+      }
+      textarea {
+        min-height: 20rem;
+      }
+    }
+    .form-btn-container {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      .btn {
+        margin-left: 1rem;
       }
     }
   }
